# MEDA

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml  streamlitapp.py
.streamlit/: config.toml
MEDA/: text_and_multi_chats.py
config/: models_config.yaml
core/: cad_knowledge.py  candidate_search.py  canvas.py  geometry_introspection.py  geometry_metrics.py  learning_store.py  lesson_signature.py  memory.py  reasoning_core.py  reward_engine.py  sandbox.py
docs/: agent_improvements_2026.md  architecture_redesign_report.md  architecture_vision.md  code_review_and_improvements.md  self_improving_meda_strategy.md  self_learning_and_fixes.md  sota_comparison.md  text_to_cad_landscape_2026.md
memory/: meda_memory.db  seed_memory.py
streamlit_utils/: file_handler.py  parameter_handler.py  state_manager.py
tests/: test_cad_knowledge.py  test_candidate_search.py  test_geometry_introspection.py  test_learning_store.py  test_reward_engine.py  test_sandbox_validation.py  test_seed_skills.py
utils/: capture_screenshot.py  get_image_info.py
